--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -144,6 +144,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Spawn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +ActionMappings=(ActionName="ToggleAttractionMode",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
 +ActionMappings=(ActionName="Collision",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
++ActionMappings=(ActionName="Score",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
