--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -147,6 +147,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Score",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +ActionMappings=(ActionName="Drop",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
 +ActionMappings=(ActionName="PickUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=O)
++ActionMappings=(ActionName="ReplicateMessage",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
